syntax = "proto3";

package io.adetalhouet.order.system.order.grpc;

option java_multiple_files = true;
option java_package = "io.adetalhouet.order.system.order.grpc";

import "google/protobuf/timestamp.proto";

service OrderService {
  rpc PlaceOrder (Order) returns (OrderId);
  rpc TrackOrderById (OrderId) returns (TrackOrderByIdResponse);
  rpc GetOrdersByClient (GetOrdersByClientRequest) returns (Orders);
}

message OrderId {
  int64 id = 1;
}

message TrackOrderByIdResponse {
  int64 id = 1;
  Order order = 3;
}

message GetOrdersByClientRequest {
  int64 client_id = 1;
}

message Orders {
  repeated Order orders = 1;
}

message Order {
  enum State {
    PENDING = 0;
    PLACED = 1;
    IN_TRANSIT = 2;
    DELIVERED = 3;
  }

  int64 id = 1;
  State state = 2;
  int64 client_id = 3;
  int64 cart_id = 4;
  google.protobuf.Timestamp date_created = 5;
}